Build distribution with jlink and copying files